# slidev-addon-subtitle

./: .bazelignore  .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  LICENSE  MODULE.bazel  README.md  lefthook.yml  mise.toml  package.json  tsconfig.json  tsdown.config.ts  vitest.config.ts
.github/workflows/: ci.yaml
docs/: .gitignore  BUILD.bazel  index.md  package.json
docs/.vitepress/: config.ts
docs/.vitepress/theme/: custom.css  index.ts
docs/.vitepress/theme/components/: SlideViewer.vue
docs/api/: index.md
docs/demo/: basic-ko.md  basic.md
docs/guide/: index.md
examples/basic/: .gitignore  BUILD.bazel  package.json  slides.md  slidev-ko.md
examples/basic/setup/: preparser.ts
examples/basic/styles/: index.css
setup/: main.ts  preparser.ts  transformers.ts  vite-plugins.ts
setup/components/: SubtitleDisplay.vue
src/: chunking.ts  index.ts  injection.ts  plugin.ts  types.ts
tests/: chunking.test.ts  injection.test.ts  plugin.test.ts
