package(default_visibility = ["//visibility:public"])

filegroup(
    name = "example_sources",
    srcs = glob(
        ["**/*"],
        exclude = [
            "*.pdf",
            "dist/**",
            "node_modules/**",
        ],
    ),
)

genrule(
    name = "pdfs",
    srcs = [
        "package.json",
        "slides.md",
        "slidev-ko.md",
        "//:lib_sources",
    ],
    outs = [
        "basic.pdf",
        "basic-ko.pdf",
    ],
    cmd = """
set -euo pipefail
EXEC_ROOT="$$(pwd)"
OUT_EN="$$EXEC_ROOT/$(location basic.pdf)"
OUT_KO="$$EXEC_ROOT/$(location basic-ko.pdf)"
if [ -L package.json ]; then
  SOURCE_ROOT="$$(cd "$$(dirname "$$(readlink package.json)")" && pwd)"
else
  SOURCE_ROOT="$$EXEC_ROOT"
fi
cd "$$SOURCE_ROOT"
yarn workspace slidev-addon-subtitle run build
yarn workspace slidev-addon-subtitle-example exec slidev export --with-clicks --output "$$OUT_EN"
yarn workspace slidev-addon-subtitle-example exec slidev export slidev-ko.md --with-clicks --output "$$OUT_KO"
""",
    local = True,
    tags = ["no-sandbox"],
)
